--- a/scss/components/team.scss
+++ b/scss/components/team.scss
@@ -7,6 +7,7 @@
   display: flex;
   position: relative;
   @include theme($dark-theme: true);
+  
 
   &__wrapper {
     display: flex;
@@ -35,11 +36,11 @@
   }
 
   &__item {
-    margin-bottom: 1.5rem;
     display: flex;
     align-items: center;
-    transition: all 0.3s;
+    transition: height 0.3s;
     flex-wrap: wrap;
+    overflow: hidden; 
 
     @include tablets {
       justify-content: center;
@@ -48,8 +49,10 @@
     
 
     &--active {
+      transition: all 0.3s;
       .team__name {
         color: $light-orange;
+        
       }
 
       .team__name:before {
@@ -57,8 +60,16 @@
       }
 
       .team__content {
-        height: auto;
-        padding-top: rem(20px);
+        height: rem(150px);
+        margin-bottom: 1.5rem;
+
+        @include tablets {
+          height: rem(250px);
+        }
+
+        @include mobile {
+          height: rem(220px);
+        }
       }
     }
 
@@ -68,6 +79,9 @@
     display: flex;
     height: 0;
     overflow: hidden;
+    transition: height 0.3s;
+    margin-bottom: 0;
+    align-items: center;
 
     @include tablets {
       width: 100%;
@@ -80,6 +94,11 @@
     width: 95%;
     display: flex;
     align-items: center;
+    margin-bottom: 1.5rem;
+
+    &:hover {
+      cursor: pointer;
+    }
 
     &:before {
       content: "";
@@ -91,6 +110,7 @@
       background-size: contain;
       transform: rotate(180deg);
       margin-right: 10px;
+      transition: all 0.3s;
     }
 
     @include tablets {
