--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,3 +24,4 @@
 @import './components/hamburger-menu';
 @import './components/video-bg';
 @import './components/slider';
+@import './components/overlay';
