--- a/scss/components/slider.scss
+++ b/scss/components/slider.scss
@@ -294,7 +294,8 @@
     @include mobile {
       position: absolute;
       width: 10%;
-      height: 100%;
+      height: 20%;
+      z-index: 9999;
     }
 
     &--left {
