--- a/scss/components/menu.scss
+++ b/scss/components/menu.scss
@@ -130,9 +130,32 @@
             width: 4.5rem;
         }
 
+        @include mobile {
+            transition: opacity 0.3s;
+        }
+
         &--active {
             width: 40rem;
             transition: all 0.3s;
+
+            @include tablets {
+                width: 30rem;
+                z-index: 99999;
+                overflow: hidden;
+            }
+
+            @include mobile {
+                z-index: 99999;
+                overflow: hidden;
+                position: absolute;
+                opacity: 1;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                top: 0;
+                width: 100%;
+                transition: opacity .3s;
+            }
 
             .menu-section__close-btn {
                 @include tablets {
@@ -140,24 +163,16 @@
                 }
             }
 
-            @include tablets {
-                position: absolute;
-                height: 100%;
-                top: 0;
-                right: 0;
-                display: flex;
-                justify-content: flex-end;
-                z-index: 99999;
-                max-width: 100%;
-            }
+            
 
             .menu-section__text {
-                padding: rem(60px) rem(35px);
                 overflow: hidden;
+                opacity: 1;
 
                 @include tablets {
-                    padding: rem(80px) rem(40px);
+                    min-width: 25rem;
                 }
+
             }
 
             .menu-section__title-container {
@@ -171,6 +186,14 @@
         position: relative;
         overflow: hidden;
         width: 100%;
+        min-width: 35rem;
+        padding: 4.2857142857rem 2.5rem;
+        opacity: 0;
+        transition: all .2s;
+
+        /*@include tablets {
+            padding: rem(80px) rem(40px);
+        }*/
     }
 
 }
