--- a/scss/components/review.scss
+++ b/scss/components/review.scss
@@ -113,7 +113,7 @@
     .review__container {
       background-color: white;
       color: #2f3234;
-      width: 50%;
+      width: 40rem;
       padding: rem(30px);
       border-radius: 8px;
       position: relative;
