--- a/scss/settings/base.scss
+++ b/scss/settings/base.scss
@@ -9,6 +9,7 @@ body {
     position: relative;
     font-weight: lighter;
     line-height: 1.7;
+    overflow: hidden;
 
     @include tablets {
         font-size: 14px;
@@ -112,6 +113,10 @@ table {
     
 .wrapper__content {
     flex: 1;
+}
+
+.maincontent {
+    position: relative;
 }
 
 .container {
