--- a/src/styles/components/team.scss
+++ b/src/styles/components/team.scss
@@ -104,7 +104,7 @@
       content: "";
       width: 10px;
       height: 10px;
-      background-image: url(/icons/arrow.png);
+      background-image: url("/img/arrow.png");
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
