--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,5 @@
-@import "./settings/*.scss";
+@import "./settings/normalize.scss";
+@import "./settings/vars.scss";
+@import "./settings/mixins.scss";
+@import './settings/*.scss';
 @import './components/*.scss';
