--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -68,6 +68,7 @@
         transform: rotate(180deg);
         line-height: 1;
         z-index: 5;
+        white-space: nowrap;
 
         @include tablets {
             font-size: 1.5rem;
@@ -123,11 +124,10 @@
 
     &__item {
         display: flex;
-        width: 5.5rem;
-        transition: all .3s;
+        transition: all .5s;
+        left: 100%;
 
         @include tablets {
-            width: 4.5rem;
         }
 
         @include mobile {
@@ -135,26 +135,22 @@
         }
 
         &--active {
-            width: 40rem;
-            transition: all 0.3s;
+            left: 0%;
+            transition: all 0.5s;
 
             @include tablets {
-                width: 30rem;
                 z-index: 99999;
                 overflow: hidden;
             }
 
             @include mobile {
                 z-index: 99999;
-                overflow: hidden;
                 position: absolute;
-                opacity: 1;
-                left: 0;
-                right: 0;
-                bottom: 0;
                 top: 0;
-                width: 100%;
-                transition: opacity .3s;
+                left: 0;
+                bottom: 0;
+                right: 0;
+                overflow: hidden;
             }
 
             .menu-section__close-btn {
@@ -163,15 +159,21 @@
                 }
             }
 
+            .menu-section__item-wrapper {
+                width: 40rem;
+
+                @include tablets {
+                }
+
+                @include mobile {
+                    opacity: 1;
+                }
+            }
+
             
 
             .menu-section__text {
-                overflow: hidden;
-                opacity: 1;
-
-                @include tablets {
-                    min-width: 25rem;
-                }
+                //width: auto;
 
             }
 
@@ -185,15 +187,26 @@
         background-color: #0000008f;
         position: relative;
         overflow: hidden;
-        width: 100%;
-        min-width: 35rem;
-        padding: 4.2857142857rem 2.5rem;
-        opacity: 0;
-        transition: all .2s;
+        padding: 4rem 2.5rem;
+        min-width: 40rem;
+        height: 100%;
 
-        /*@include tablets {
-            padding: rem(80px) rem(40px);
-        }*/
+        @include tablets {
+            min-width: 25rem;
+        }
+
+        
+    }
+
+    &__item-wrapper {
+        width: 0vh;
+        overflow: hidden;
+        transition: all .5s;
+
+        @include mobile {
+            transition: opacity .5s;
+            opacity: 0;
+        }
     }
 
 }
