--- a/src/styles/components/review.scss
+++ b/src/styles/components/review.scss
@@ -149,4 +149,50 @@
       }
     }
 }
+
+.review__overlay {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 99999;
+  background-color: #00000080;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+  .review__container {
+    padding: 2rem;
+    width: 40%;
+    min-height: 3rem;
+    border-radius: 8px;
+    background-color: white;
+    position: relative;
+
+    @include tablets {
+      width: 70%;
+    }
+
+    @include mobile {
+      width: 90%;
+    }
+  }
+
+  .review__desc {
+    position: relative;
+    margin-top: 1rem;
+  }
+  
+  .close-btn {
+    display: block;
+    top: rem(15px);
+  
+    &:before,
+    &:after {
+      background-color: $orange;
+    }
+  }
+}
+
+
   
