--- a/src/styles/components/team.scss
+++ b/src/styles/components/team.scss
@@ -134,8 +134,16 @@
   }
   &__img {
     height: 100%;
-    width: 100%;
+    margin: auto;
+    width: auto;
+    position: relative;
+    /* width: 100%; */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -o-object-fit: cover;
     object-fit: cover;
+    object-position: center;
   }
 
   &__about {
