--- a/src/styles/components/video.scss
+++ b/src/styles/components/video.scss
@@ -19,6 +19,20 @@
   position: relative;
 }
 
+.player__wrapper {
+  height: 403px;
+
+  @include tablets {
+    width: 100%;
+    height: 452px;
+  }
+
+  @include mobile {
+    width: 100%;
+    height: 280px;
+  }
+}
+
 .player__playback {
   position: relative;
   flex: 1;
@@ -111,7 +125,101 @@
   .player__btn--play {
     visibility: hidden;
   }
+
+  .player__splash {
+    visibility: hidden;
+  }
 }
+
+.player__splash {
+  visibility: visible;
+  position: absolute;
+  display: block;
+  width: 40%;
+  height: 40%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  .player__btn--play{
+      fill: #000000c4;  
+  }
+}
+
+.player__volume {
+  position: relative;
+  flex: 1;
+  height: 100%;
+
+  &:before {
+    content: "";
+    width: 100%;
+    height: 3px;
+    background-color: gray;
+    position: absolute;
+    transform: translateY(-50%);
+    top: 50%;
+  }
+}
+
+.player__audio {
+  display: flex;
+  align-items: center;
+  width: 15%;
+  margin-left: rem(20px);
+  margin-right: rem(20px);
+}
+
+.player__volume-button {
+  border: 0;
+  background-color: gray;
+  width: 12px;
+  height: 12px;
+  display: block;
+  border-radius: 50%;
+  position: relative;
+  left: 0;
+  margin-right: 5px;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+.player__void-button {
+  background-color: transparent;
+  border: none;
+  fill: gray;
+  width: 30px;
+  height: 30px;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+
+.video__container {
+  width: 604px;
+
+  @include tablets {
+    width: 100%;
+  }
+
+  @include mobile {
+    width: 100%;
+    height: 280px;
+  }
+}
+
+.ytp-watermark {
+  display: none!important;
+}
+
 
 
 
