--- a/src/styles/components/videoplayer.scss
+++ b/src/styles/components/videoplayer.scss
@@ -15,6 +15,14 @@
   }
 }
 
+.videoplayer__wrapper {
+  width: 600px;
+
+  @include tablets {
+    width: 100%;
+  }
+}
+
 .videoplayer {
   position: relative;
 }
