js changes, fixed accordions bugs

--- a/src/styles/components/team.scss
+++ b/src/styles/components/team.scss
@@ -60,15 +60,14 @@
       }
 
       .team__content {
-        height: rem(150px);
         margin-bottom: 1.5rem;
 
         @include tablets {
-          height: rem(250px);
+          //height: rem(250px);
         }
 
         @include mobile {
-          height: rem(220px);
+          //height: rem(220px);
         }
       }
     }
@@ -85,8 +84,7 @@
 
     @include tablets {
       width: 100%;
-      flex-direction: column;
-      align-items: center;
+      display: block;
     }
   }
 
@@ -126,10 +124,12 @@
     border-radius: 50%;
     overflow: hidden;
     margin-right: rem(18px);
+    flex:1;
 
     @include tablets {
-      margin-right: 0;
+      margin: auto;
       margin-bottom: rem(18px);
+      flex:0;
     }
   }
   &__img {
@@ -153,6 +153,11 @@
     align-items: center;
     align-content: center;
     max-width: rem(220px);
+    flex:1;
+
+    @include tablets {
+      margin: auto;
+    }
   }
 
   &__post {
