--- a/src/styles/components/menu.scss
+++ b/src/styles/components/menu.scss
@@ -17,6 +17,9 @@
         right: 0;
         top: 0;
         bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
 
         @include tablets {
             width: 100%;
@@ -31,16 +34,18 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        display: flex;
-        align-items: flex-end;
         padding: rem(40px) rem(20px);
+        height: 100%;
+        width: 80px;
         position: relative;
+        float: left;
+        cursor: pointer;
 
         &:hover {
             cursor: pointer;
         }
 
-        &:after {
+        &:before {
             content: "";
             position: absolute;
 
@@ -69,6 +74,8 @@
         line-height: 1;
         z-index: 5;
         white-space: nowrap;
+        height: 100%;
+        width: 100%;
 
         @include tablets {
             font-size: 1.5rem;
@@ -76,8 +83,15 @@
     }
 
     &__list {
-        display: flex;
-        height: 100%;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        list-style: none;
+
+        @include tablets {
+            left: 0;
+        }
     }
 
     &__close-btn {
@@ -123,11 +137,12 @@
         
 
     &__item {
-        display: flex;
-        transition: all .5s;
-        left: 100%;
+        height: 100%;
+        float: left;
 
         @include tablets {
+            float: right;
+            display: flex;
         }
 
         @include mobile {
@@ -141,6 +156,10 @@
             @include tablets {
                 z-index: 99999;
                 overflow: hidden;
+                position: absolute;
+                display: flex;
+                left: 0;
+                right: 0;
             }
 
             @include mobile {
@@ -160,9 +179,12 @@
             }
 
             .menu-section__item-wrapper {
-                width: 40rem;
+
 
                 @include tablets {
+                    flex: 1;
+                    padding: 100px 0;
+                    opacity:1;
                 }
 
                 @include mobile {
@@ -184,29 +206,28 @@
     }
 
     &__text {
-        background-color: #0000008f;
-        position: relative;
-        overflow: hidden;
-        padding: 4rem 2.5rem;
-        min-width: 40rem;
-        height: 100%;
-
-        @include tablets {
-            min-width: 25rem;
-        }
+        width: 500px;
+        color: #fff;
+        padding: 15px;
+        padding: 20px;
+        // position: relative;
 
         
     }
 
     &__item-wrapper {
-        width: 0vh;
+        float: left;
+        background-color: #00000042;
+        width: 0;
         overflow: hidden;
-        transition: all .5s;
+        height: 100%;
+        transition: width .3s;
 
-        @include mobile {
-            transition: opacity .5s;
+        @include tablets{
             opacity: 0;
+            transition: opacity .3s;
         }
+
     }
 
 }
